<resources>
    <string name="app_name">SIK Bumdes</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="MODEL">list</string>
    <string name="position">position</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="title_activity_details">DetailsActivity</string>
    <string name="answer">ANSWER</string>
    <string name="answer_low">answer</string>
    <string name="connect">CONNECT</string>
    <string name="years">years</string>
    <string name="asked">asked</string>
    <string name="profile">"'s Profile"</string>
    <string name="transition_avatar_border" translatable="false">avatar_border</string>
    <string name="transition_card" translatable="false">card</string>
    <string name="transition_background" translatable="false">background</string>
    <string name="transition_list" translatable="false">list</string>
    <string name="details_connect">CONNECT</string>
    <string name="details_close">CLOSE</string>
    <string name="details_details">DETAILS</string>
    <string name="initializing_faker">Initializing Faker...</string>
    <string name="title_activity_jurnal2">Jurnal</string>
    <string name="title_activity_account">Data Akun</string>
    <string name="title_activity_neraca_awal">Neraca Awal</string>
    <string name="title_activity_anggaran">Rancangan Anggaran Bisnis</string>
    <string name="title_activity_user">Pengaturan User</string>
    <string name="title_activity_account_data">AccountDataActivity</string>

    <string-array name="posisi_normal">
        <item>Debit</item>
        <item>Kredit</item>
    </string-array>
</resources>
